@@ -1,4 +1,5 @@
 Current
+New: Added a method in Assertion class to allow downstream TestNG consumers to override the error message (Ryan Laseter)
 Fixed: GITHUB-165: @AfterGroups is not executed when group member fails or is skipped (Krishnan Mahadevan)
 Fixed: GITHUB-118: @BeforeGroups only called if group is specified explicitly (Krishnan Mahadevan)
 Fixed: GITHUB-182: Inherited test methods do not get expected group behavior (Krishnan Mahadevan)
